snapshots/syntax/library/statements/randomize/randomize_at_module_level.snap
---
source: src/syntax/library/statements/runtime_state/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RandomizeStatement
      children:
        - kind: RandomizeKeyword
          text: Randomize
        - kind: Newline
          text: "\n"
